# usbguard_gui

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PyGObject.md  README.md  TODO.md  pyproject.toml  release.py  tox.ini
.copr/: Makefile
.github/workflows/: fedora.yml  makefile.yml
rpm/: 70-usbguard-gui.rules  70-usbguard_gui.rules  usbguard_gui-autostart.desktop  usbguard_gui.desktop  usbguard_gui.spec.in
src/usbguard_gui/: __init__.py  __main__.py  app.py  dbus_client.py  device.py  device_dialog.py  device_list.py  screensaver.py  settings.py
src/usbguard_gui/introspection/: org.freedesktop.ScreenSaver.xml  org.usbguard.Devices1.xml  org.usbguard.Policy1.xml
tests/: conftest.py  test_app.py  test_async_api.py  test_dbus_client.py  test_device.py  test_device_list.py  test_release.py
